# eden-vault

./: .gitignore  Cargo.toml  HowToDeploy.txt  README.md  canister_ids.json  config.sh  dev.sh  dfx.json  foundry.toml  package-lock.json  package.json
broadcast/DeployERC20DepositHelper.s.sol/1/: run-1732728020.json
broadcast/DeployERC20DepositHelper.s.sol/97/: run-1732728143.json
broadcast/DeployForgeToken.s.sol/97/: run-latest.json
dev_scripts/: config.sh  dev.sh  testDeposit.sh  testSetAdmin.sh  testWithdraw.sh
script/: DeployERC20DepositHelper.s.sol  DeployForgeToken.s.sol
src/: ERC20DepositHelper.sol  ERC20DepositHelper.test.sol  EdenTokenLL.sol  ForgeToken.sol  canister_ids.json
src/eden_vault_backend/: Cargo.toml  eden_vault_backend.did
src/eden_vault_backend/src/: checked_amount.rs  dashboard.rs  deposit.rs  endpoints.rs  erc20.rs  eth_rpc.rs  ledger_client.rs  lib.rs  lifecycle.rs  main.rs  management.rs  memo.rs  state.rs  storage.rs  tx.rs  types.rs  user.rs  withdraw.rs
src/eden_vault_backend/src/dashboard/: tests.rs
src/eden_vault_backend/src/endpoints/: ckerc20.rs
src/eden_vault_backend/src/eth_logs/: mod.rs
src/eden_vault_backend/src/eth_rpc_client/: mod.rs  providers.rs
src/eden_vault_backend/src/lifecycle/: init.rs  upgrade.rs
src/eden_vault_backend/src/state/: audit.rs  event.rs
src/eden_vault_backend/src/state/audit/: tests.rs
src/eden_vault_backend/src/state/transactions/: mod.rs
tests/: e2e.spec.cts  tsconfig.json
tests/utils/: edenVaultBackend.ts  identities.ts  utils.ts
