[package]
name = "eden_vault_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
getrandom = { version = "0.2", features = ["custom"] }
askama = { version = "0.12.1", features = ["serde-json"] }
candid = "0.10.10"
ethnum = { version = "1.3.2", features = ["serde"] }
futures = "0.3.31"
hex = "0.4.3"
evm-rpc-client = { git = "https://github.com/dfinity/ic", branch = "master" }
ic-canisters-http-types = { git = "https://github.com/dfinity/ic", branch = "master" }
hex-literal = "0.4.1"
ic-canister-log = "0.2.0"
ic-cdk = "0.16.0"
ic-cdk-timers = "0.10.0"
ic-ethereum-types = "1.0.0"
ic-crypto-secp256k1 = { git = "https://github.com/dfinity/ic", branch = "master" }
ic-management-canister-types = { git = "https://github.com/dfinity/ic", branch = "master" }
ic-metrics-encoder = "1"
ic-sha3 = "1.0.0"
ic-stable-structures = "0.6.5"
ic-utils-ensure = { git = "https://github.com/dfinity/ic", branch = "master" }
icrc-ledger-client-cdk = { git = "https://github.com/dfinity/ic", branch = "master" }
icrc-ledger-types = { git = "https://github.com/dfinity/ic", branch = "master" }
minicbor = { version = "0.19.1", features = ["alloc", "derive"] }
minicbor-derive = "0.13.0"
num-bigint = "0.4.6"
num-traits = { version = "0.2.12", features = ["libm"] }
phantom_newtype = { git = "https://github.com/dfinity/ic", branch = "master" }
rlp = "0.5.2"
scopeguard = "1.1.0"
serde = "1.0.210"
serde_bytes = "0.11.15"
serde_json = "1.0.128"
strum = { version = "0.26.3", features = ["derive"] }
strum_macros = "0.26.4"
thiserror = "1.0.62"
thousands = "0.2"
time = { version = "0.3.36", features = ["formatting"] }

[dev-dependencies]
assert_matches = "1.5.0"
candid_parser = "0.1.4"
ethers-core = "2.0.8"
flate2 = "1.0.34"
hex = { version = "0.4.3", features = ["serde"] }
ic-agent = { version = "0.37.1", features = [
    "experimental_sync_call",
    "hyper",
    "reqwest",
    "pem",
] }
ic-base-types = { git = "https://github.com/dfinity/ic", branch = "master" }
ic-cketh-test-utils = { git = "https://github.com/dfinity/ic", branch = "master" }
ic-config = { git = "https://github.com/dfinity/ic", branch = "master" }
ic-crypto-test-utils-reproducible-rng = { git = "https://github.com/dfinity/ic", branch = "master" }
ic-ledger-suite-orchestrator-test-utils = { git = "https://github.com/dfinity/ic", branch = "master" }
ic-state-machine-tests = { git = "https://github.com/dfinity/ic", branch = "master" }
maplit = "1"
proptest = "1.5.0"
rand = { version = "0.8.5", features = ["small_rng"] }
scraper = "0.17.1"
tempfile = "3.13.0"
tokio = "1.40.0"

[features]
debug_checks = []
